opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/hurl"
dev-repo: "git+https://github.com/robur-coop/hurl.git"
bug-reports: "https://github.com/robur-coop/hurl/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "2.0.0"}
  "httpcats"
  "mirage-crypto-rng-miou-unix"
  "hxd"
  "multipart_form"
  "cmdliner"
  "jsonm"
  "decompress"
  "bstr"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Hurl, a simple command-line HTTP client"
pin-depends: [
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#2f2a549d01c8a7f86d94a145f9c37abdd128041c" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#7a1d4097e93317fd154b8a87752045eef5cefa3a" ]
]
