opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/hurl"
dev-repo: "git+https://github.com/robur-coop/hurl.git"
bug-reports: "https://github.com/robur-coop/hurl/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "2.0.0"}
  "httpcats"
  "mirage-crypto-rng-miou-unix"
  "hxd"
  "multipart_form"
  "cmdliner"
  "jsonm"
  "decompress"
  "bstr"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Hurl, a simple command-line HTTP client"
pin-depends: [
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#f9911ea5f8c935bde2bd5aac581d029c1d623988" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#7a1d4097e93317fd154b8a87752045eef5cefa3a" ]
  [ "h1.dev" "git+https://github.com/robur-coop/ocaml-h1.git#263fdf3afa72966793ee70ef18102bb3a318a4cf" ]
]
