opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/hurl"
dev-repo: "git+https://github.com/robur-coop/hurl.git"
bug-reports: "https://github.com/robur-coop/hurl/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "2.8.0"}
  "httpcats" {>= "0.1.0"}
  "mirage-crypto-rng-miou-unix"
  "hxd" {>= "0.3.4"}
  "multipart_form" {>= "0.6.0"}
  "cmdliner" {>= "1.3.0"}
  "jsonm"
  "decompress" {>= "1.5.0"}
  "bstr" {>= "0.0.2"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [ "dune" "runtest" "-p" name "-j1" ]
synopsis: "Hurl, a simple command-line HTTP client"
x-ci-accept-failures: ["debian-11"]
